syntax = "proto3";

option csharp_namespace = "Api";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package greet;

// The greeting service definition.
service ProductService {
    // Sends a greeting
    rpc Add (AddProductRequest) returns (AddProductResponse){
        option (google.api.http) = {
            post: "/v1/product/add"
            body: "new_product"
        };
    };

    rpc Get (GetProductRequest) returns (GetProductResponse){
        option (google.api.http) = {
            get: "/v1/product/get/{product_id}"
        };
    };

    rpc List (ListProductRequest) returns (ListProductResponse){
        option (google.api.http) = {
            get: "/v1/product/list"
        };
    };

    rpc UpdatePrice (UpdatePriceProductRequest) returns (UpdatePriceProductResponse){
        option (google.api.http) = {
            put: "/v1/product/update/{product_id}"
            body: "updated_fields"
        };
    };
}

message AddProductRequest {
    NewProduct new_product = 1;
    
    message NewProduct {
        string name = 1;
        double price = 2;
        double weight = 3;
        ProductType type = 4;
        int64 warehouse_id = 5;
    }
}

enum ProductType {
    COMMON = 0;
    HOUSEHOLDCHEMICALS = 1;
    TECHNIC = 2;
    PRODUCTS = 3;
}

message AddProductResponse {
    int32 id = 1;
}

message GetProductRequest {
    int32 product_id = 1;
}

message GetProductResponse {
    ProductProto product = 1;
}

message ProductProto {
    int32 id = 1;
    string name = 2;
    double price = 3;
    double weight = 4;
    ProductType type = 5;
    google.protobuf.Timestamp creation_date = 6;
    int64 warehouse_id = 7;
}

message ListProductRequest {
    OrderField order_field = 1;
    int32 page = 2;
    int32 size = 3;
    ProductType product_type = 4;
    google.protobuf.Timestamp creation_date = 5;
    google.protobuf.Int64Value warehouse_id = 6;

    enum OrderField {
        NOORDERFIELD = 0;
        CREATIONDATE = 1;
        TYPE = 2;
        WAREHOUSEID = 3;
    }
}

message ListProductResponse {
    repeated ProductProto products = 1;
    int32 filtered_products_count = 2;
    int32 page = 3;
}

message UpdatePriceProductRequest {
    int32 product_id = 1;
    UpdatedFields updated_fields = 2;
    
    message UpdatedFields {
        double price = 1;
    }
}

message UpdatePriceProductResponse {
    ProductProto product = 1;
}
